clean up workflow

--- a/.github/workflows/workflow-push-test.yaml
+++ b/.github/workflows/workflow-push-test.yaml
@@ -40,14 +40,14 @@ jobs:
     # Download the Databricks CLI. See https://github.com/databricks/setup-cli
     - uses: databricks/setup-cli@main
 
-    - name: Install mods
-      run: |
-        pip install pytest setuptools wheel
+    # - name: Install mods
+    #   run: |
+    #     pip install pytest setuptools wheel
 
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
+    # - name: Extract branch name
+    #   shell: bash
+    #   run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+    #   id: extract_branch
 
     - name: Update Databricks Git folder
       run: |
